# zero-verse

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  mise.toml
.github/workflows/: ci.yml  pages.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: demography.rs
crates/core/src/: brain.rs  engine.rs  laws.rs  lib.rs  market.rs  rng.rs  scenarios.rs  state.rs
crates/wasm-host/: Cargo.toml
crates/wasm-host/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
docs/: Gemfile  PLAN.md  _config.yml  index.md
docs/_layouts/: default.html
docs/assets/css/: style.css
docs/design/: 00-overview.md  01-axioms.md  02-resources.md  03-skills.md  04-market.md  05-kinship.md  06-communication.md  07-scoring.md  08-architecture.md  09-wit-draft.md  10-ideas.md  90-open-questions.md  91-rejected.md  human.md  world.md
docs/viewer/: index.html  style.css  worker.js
guests/: Cargo.toml
guests/brain-forager/: Cargo.toml
guests/brain-forager/src/: lib.rs
guests/scenario-m1/: Cargo.toml
guests/scenario-m1/src/: lib.rs
pages/: deno.json
pages/content/docs/: architecture.md  axioms.md  communication.md  human.md  ideas.md  kinship.md  market.md  open-questions.md  overview.md  plan.md  rejected.md  resources.md  scoring.md  (+3 more)
pages/scripts/: build.ts  dev.ts
pages/src/: base.ts  content.ts  layout.tsx  link.tsx  markdown.ts  play.tsx  router.tsx  routes.ts
pages/static/: styles.css
scripts/: build-guests.sh  build-web.sh  smoke-web.mjs
wit/: world.wit
wit-scenario/: scenario.wit
(+4 files in other folders)
