[package]
name = "zeroverse-wasm-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
zeroverse-core = { path = "../core" }
wasmtime = { version = "36", default-features = false, features = ["runtime", "component-model", "cranelift", "parallel-compilation"] }
anyhow = "1"

[[bin]]
name = "zeroverse-wasm"
path = "src/bin/zeroverse-wasm.rs"
